human_written_tests/WebAssembly/processed_control_flow_validation/test_block_140.wast
(assert_invalid
  (module (func $type-break-operand-empty-vs-nums (result i32)
    (i32.add (block (br 0)))
  ))
  "type mismatch"
)